--- a/styles.css
+++ b/styles.css
@@ -20,8 +20,8 @@
     /* --Layout */
     --mobile: 375px;
     --desktop: 1440px;
-    --cardWidth: 311px;
-    --cardHeight: 222px;
+    /* --cardWidth: 311px;
+    --cardHeight: 222px; */
 }  
 
 *, *::before, *::after {
@@ -39,28 +39,24 @@ body {
 }
 
 header {
-    /* margin: 5.75em 2.5em; */
+    margin-bottom: 2.5em;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
 p {
-    margin: 0.5em 0 1em;
     font-size: 0.9375rem;
-    text-align: center;
 }
 
 h1 {
     font-size: 1.5rem;
     font-weight: 600;
-    color: var(--veryDarkBlue);
 }
 
 h2 {
     font-size: 1.25rem;
     font-weight: 600;
-    color: var(--veryDarkBlue);
 }
 
 img {
@@ -78,8 +74,26 @@ img {
     align-items: center;
 }
 
+.header__subHeading {
+    font-size: 1.5rem;
+    font-weight: 200;
+    color: var(--veryDarkBlue);
+}
+
+.header__primaryHeading {
+    color: var(--veryDarkBlue);
+}
+
+.header__blob {
+    margin-top: .5em;
+    padding: 0 2em 0 2em;
+    color: var(--grayishBlue);
+    text-align: center;
+    line-height: 1.6;
+}
+
 .card {
-    margin-bottom: 1.5em;
+    margin: 1.5em 2em 1.5em 2em;
     padding: 1.5em;
     background-color: var(--white);
     border-radius: .5em;
@@ -88,6 +102,7 @@ img {
 
 .card__title {
     margin-bottom: 0.25em;
+    color: var(--veryDarkBlue);
 }
 
 .card__desc {
@@ -120,9 +135,4 @@ img {
 
 .card--blue {
     border-top: 4px solid var(--blue);
-}
-
-.sub-heading {
-    font-size: 1.5rem;
-    font-weight: 200;
 }
